--- a/helpful.html
+++ b/helpful.html
@@ -13,7 +13,7 @@ initial-scale=1.0">
     <h1> Welcome to your guide for Meditation</h1> 
       <aside><i> Start your journey today, share this content with someone you care about - V</i> </aside></header></div>
 
- <nav> <b> Home &nbsp; What is Meditation &nbsp; How to Practice &nbsp; Helpful Tips </nav>
+ <nav> <b> Home &nbsp; What is Meditation &nbsp; How to Practice &nbsp; Helpful Tips %nbsp; Contact Me </nav>
     <main><h1> Helpfulness</h1> </main>  
 <div id ="gallery"> 
    <img src ="https://media.giphy.com/media/RT3S8fkHUxECJJpwvT/giphy.gif" width = '400' height ='300'/> 
