--- a/howto.html
+++ b/howto.html
@@ -13,7 +13,7 @@ initial-scale=1.0">
     <h1> Welcome to your guide for Meditation</h1> 
       <aside><i> This process is all about you and your mental well-being... Trust the Process - V</i> </aside></header></div>
 
- <nav> <b> Home &nbsp; What is Meditation &nbsp; How to Practice &nbsp; Helpful Tips </nav>
+ <nav> <b> Home &nbsp; What is Meditation &nbsp; How to Practice &nbsp; Helpful Tips %nbsp; Contact Me </nav>
     <main><h1> How to Practice Meditation</h1> </main>  
 <div id ="gallery"> 
    <img src ="https://media.giphy.com/media/cAFvw6xkh7hiq2ck1n/giphy.gif" width = '600' height ='300'/> 
