--- a/contactme.html
+++ b/contactme.html
@@ -13,7 +13,7 @@ initial-scale=1.0">
     <h1> Welcome to your guide for Meditation</h1> 
       </header></div>
 
- <nav> <b> Home &nbsp; What is Meditation &nbsp; How to Practice &nbsp; Helpful Tips &nbsp; Contact Me</nav>
+ <nav> <b> <a href ="welcome.html"> Home &nbsp; <a href ="whatis.html"> What is Meditation &nbsp; <a href ="howto.html">  How to Practice &nbsp;<a href ="helpful.html">  Helpful Tips &nbsp;<a href ="contactme.html">  Contact Me</nav>
    
 
 <form method = "get">
