--- a/welcome.html
+++ b/welcome.html
@@ -13,7 +13,7 @@ initial-scale=1.0">
   <div class ="div2"> <header>
     <h1> Welcome to your guide for Meditation</h1> 
       <aside><i> During Ancient Times Meditation was a form of daily practice for health, spirtuality, and wholeness...</i> </aside></header></div>
- <nav> <b> Home &nbsp; What is Meditation &nbsp; How to Practice &nbsp; Helpful Tips %nbsp; Contact Me </nav>
+  <nav> <b> <a href ="welcome.html"> Home &nbsp; <a href ="whatis.html"> What is Meditation &nbsp; <a href ="howto.html">  How to Practice &nbsp;<a href ="helpful.html">  Helpful Tips &nbsp;<a href ="contactme.html">  Contact Me</nav>
     
 <div class="div1"> <main>
    <img src="https://media.giphy.com/media/4Z65fuphOT7GM/giphy.gif" width = '1200' height ='500'/> 
