--- a/whatis.html
+++ b/whatis.html
@@ -6,7 +6,7 @@
 content="width=device-width,
 initial-scale=1.0">
 <title> All About Meditation </title>
-<link rel="stylesheet" type="webpage.css">
+<link rel="stylesheet" type="css1.css">
 
 </head>
 
