--- a/helpful.html
+++ b/helpful.html
@@ -2,7 +2,7 @@
 <html lang = "en"
 <head>
 <title> All About Meditation </title>
-<link rel="stylesheet" type="webpage.css">
+<link rel="stylesheet" type="css1.css">
 <meta charset ="UTF-8"> 
 <meta name="viewport"
 content="width=device-width,
