--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang = "en"
 <meta charset ="UTF-8"> 
 <head>
-<meta name="viewport"
+ <meta name="viewport"
 content="width=device-width,
 initial-scale=1.0">
-<link rel="stylesheet" type="webpage.css">
+<title> All About Meditation </title>
+<link rel="stylesheet" type="css1.css">
+</head>
 
 
 <title> All About Meditation </title>
