--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset ="UTF-8"> 
 <head>
 <title> All About Meditation </title>
-<link rel="stylesheet" type="css1.css">
+<link rel="stylesheet" href="css1.css">
 </head>
 
 
