--- a/whatis.html
+++ b/whatis.html
@@ -1,9 +1,13 @@
 <!DocType html>
 <html lang = "en"
-<meta charset ="UTF-8"> 
+
 <head>
-<title> All About Meditation </title>
+  <meta charset ="UTF-8"> 
+  <meta name="viewport"
+content="width=device-width,
+initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css1.css">
+ <title> All About Meditation </title>
 </head>
 
 </head>
