--- a/contactme.html
+++ b/contactme.html
@@ -8,7 +8,7 @@ initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css1.css">
  <title> All About Meditation </title>
 </head>
-
+<body>
  <div class ="div2"> <header>
     <h1> Welcome to your guide for Meditation</h1> 
       </header></div>
