--- a/howto.html
+++ b/howto.html
@@ -7,7 +7,7 @@ initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css1.css">
  <title> All About Meditation </title>
 </head>
-
+<body>
  <div class ="div2"> <header>
     <h1> Welcome to your guide for Meditation</h1> 
       <aside><i> This process is all about you and your mental well-being... Trust the Process - V</i> </aside></header></div>
