--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@ initial-scale=1.0">
  <title> All About Meditation </title>
 </head>
 
-
-<title> All About Meditation </title>
-</head>
-
 <body>
   <div class ="div2"> <header>
     <h1> Welcome to your guide for Meditation</h1> 
@@ -25,4 +21,5 @@ initial-scale=1.0">
   </div>
    <article> <i>Hello, my name is Valerie. <br> I started practicing meditation about 4 years ago. Throughout this time I have acquired and complied some helpful information to relay to others with the intent to help assist you during your journey and/or practices. <br> During my path to spiritual enlightenment I realized that everything I was searching for has always been inside of me. As I sat in stillness and listened to my inner thoughts in a non-judgemental way, but a way to learn myself deeply. I realized that meditation was just the beginning of developing a strong sense of self and connecting to all things around me. <br><br> I hope this information finds you in good health and with an open-mind but, more importantly you use this information to help yourself or someone you know.  </i></article>
         
-    <footer><small><i>Copyright &copy; 2023 Valerie Dawson</i></small><footer>
+    <footer><small><i>Copyright &copy; 2023 Valerie Dawson</i></small></footer>
+    </body</htmlr>
