--- a/whatis.html
+++ b/whatis.html
@@ -9,9 +9,6 @@ initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css1.css">
  <title> All About Meditation </title>
 </head>
-
-</head>
-
 <body>
   
   <div class ="div2"> <header>
@@ -37,5 +34,5 @@ initial-scale=1.0">
   
  
         
-    <footer><small><i>Copyright &copy; 2023 Valerie Dawson</i></small><footer>
+    <footer><small><i>Copyright &copy; 2023 Valerie Dawson</i></small></footer>
       </body></html>
