--- a/howto.html
+++ b/howto.html
@@ -44,5 +44,5 @@ initial-scale=1.0">
    </ul>
    </p2>
         
-    <footer><small><i>Copyright &copy; 2023 Valerie Dawson</i></small><footer>
+    <footer><small><i>Copyright &copy; 2023 Valerie Dawson</i></small></footer>
       </body></html>
