--- a/helpful.html
+++ b/helpful.html
@@ -51,5 +51,5 @@ Narrated by: Seth Thompson </td>
     </tbody>
    </table> 
         
-    <footer><small><i>Copyright &copy; 2023 Valerie Dawson</i></small><footer>
+    <footer><small><i>Copyright &copy; 2023 Valerie Dawson</i></small></footer>
       </body></html>
