--- a/contactme.html
+++ b/contactme.html
@@ -36,5 +36,5 @@ initial-scale=1.0">
 <input type="radio" name="signup" id="no" value="no"> No,Thank you. <br><br>
           
      <input type="submit" value="Submit">  <input type="reset">          </form> 
-    <footer><small><i>Copyright &copy; 2023 Valerie Dawson</i></small><footer>
+    <footer><small><i>Copyright &copy; 2023 Valerie Dawson</i></small></footer>
       </body></html>
